Bug 436106 - kwin does not handle xdg popup reposition resize
Summary: kwin does not handle xdg popup reposition resize
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-wayland-nested (other bugs)
Version First Reported In: 5.21.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-23 19:07 UTC by Weng Xuetian
Modified: 2021-04-23 23:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2021-04-23 19:07:18 UTC
SUMMARY
When receiving xdg_popup_reposition request, the resize is not handled and the popup is still using the old size.


STEPS TO REPRODUCE
1. Using Gtk4 to show popup, try to resize the popup.

OBSERVED RESULT
popup is using the old size, but new popistion.

EXPECTED RESULT
popup is using the new size and new popistion.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-04-23 20:40:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/894
Comment 2 Weng Xuetian 2021-04-23 23:52:30 UTC
Git commit 17a585b5d5547810b3f467a20b0943a9be1a4805 by Weng Xuetian.
Committed on 23/04/2021 at 20:36.
Pushed by xuetianweng into branch 'master'.

Always apply size change from xdg_popup_reposition.

M  +1    -4    src/xdgshellclient.cpp

https://invent.kde.org/plasma/kwin/commit/17a585b5d5547810b3f467a20b0943a9be1a4805