Always apply size change from xdg_popup_reposition.

BUG: 436106